# A-Hierarchical-Solution-based-on-MEC-and-IoT-for-Cyberattack-Detection-in-6G-Networks

./: .gitignore  README.md  links.txt  requirements.txt
constants/: __init__.py  features.py  labels.py
docs/: attack_testing.md  features_report.txt  labels_list.txt  project_overview.md
docs/results/: session_report_20260531.md  training_20260517_115543.md  training_20260517_151015.md  training_20260517_221945.md  training_20260517_231041.md  training_20260518_105605.md  training_20260518_115137.md  training_20260518_121603.md  training_20260518_130014.md
models/: binary_classifier.pkl
notebooks/: README.md  data_pre-analysis.ipynb  data_preprocessing.ipynb  database_creation.ipynb  dataset_analysis.ipynb  model_training.ipynb  training.ipynb
notebooks/old/: database_creation.ipynb
results/dataset_analysis/: CIC_APT_IIoT_2024_analysis_report.md  CIC_BCCC_NRC_IoMT_2024_analysis_report.md  CIC_IIoT_dataset_2025_analysis_report.md  CIC_IoT_DIAD_2024_analysis_report.md  CIC_IoT_dataset_2023_analysis_report.md
scripts/: attack_orchestrator.py  benign_trafic_simulator.sh  evaluate_ids.py  fill_artigo.py  network_binary_ids.py  network_ids.py  trafic_capturer.sh
tools/flowmeter/: example.py  pyproject.toml
tools/flowmeter/flowmeter/: __init__.py  _convert.py
tools/flowmeter/flowmeter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
